--- a/AutoClick/Pages/Producto.cshtml
+++ b/AutoClick/Pages/Producto.cshtml
@@ -261,10 +261,7 @@
                         </div>
 
                         <div class="marchamo-disclaimer">
-                            Autoclick.cr informa que los valores presentados en esta plataforma son únicamente estimaciones de
-                            referencia. El cálculo oficial del marchamo corresponde al Instituto Nacional de Seguros (INS) y el
-                            monto exacto de los gastos de traspaso debe ser determinado por un abogado autorizado. Autoclick.cr no
-                            se hace responsable por diferencias entre los valores estimados y los montos oficiales.
+                            La información de AutoClick.cr es referencial y se basa en la normativa y la Constitución Política de Costa Rica. Los valores y resoluciones oficiales deben confirmarse con las entidades correspondientes.
                         </div>
                     </section>
                 }
