--- a/AutoClick/Pages/Shared/_Layout.cshtml
+++ b/AutoClick/Pages/Shared/_Layout.cshtml
@@ -16,6 +16,9 @@
     
     <title>@ViewData["Title"] - AutoClick.cr</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="~/images/logos/LOGOS AUTOCLICK/LOGOS AUTOCLICK-06.png" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
